--- a/blogs/07_github_action_to_build_website/index.qmd
+++ b/blogs/07_github_action_to_build_website/index.qmd
@@ -55,6 +55,11 @@ jobs:
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
       
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libfontconfig1-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev
+      
     - name: Install quarto
       uses: quarto-dev/quarto-actions/setup@v2
       
