--- a/index.qmd
+++ b/index.qmd
@@ -28,7 +28,7 @@ about:
 
 I am an engineer and a PhD student in [EMSE](https://emse.engineering.gwu.edu/) at [George Washington University](https://www.gwu.edu/), supervised by professor [John Helveston](https://www.jhelvy.com). I do {{< var rlink >}} development and data analysis in human behavior using choice models. I develop websites and webapps using {{< var quarto >}} and {{< var shiny >}}.
 
-Ongoing projects:
+**Ongoing projects:**
 
 1. [surveydown](https://surveydown.org): A flexible, open-source platform for making surveys with {{< var rnolink >}}, Quarto, Shiny, and PostgreSQL, awarded 🎉 2nd prize in [GW OSPO](https://ospo.gwu.edu/2024-student-open-source-award-winners), funded by the {{< var sloan >}}.
 2. [BEV Smart Charging](https://sc.pingfanhu.com): A survey-based data analysis studying Battery Electric Vehicle owners' willingness to opt in smart charging programs, funded by the {{< var sloan >}}.
