--- a/blogs/07_github_action_to_build_website/index.qmd
+++ b/blogs/07_github_action_to_build_website/index.qmd
@@ -57,7 +57,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libfontconfig1-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev
+        sudo apt-get install -y libfontconfig1-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev libfribidi-dev
       
     - name: Install quarto
       uses: quarto-dev/quarto-actions/setup@v2
