--- a/index.qmd
+++ b/index.qmd
@@ -32,3 +32,4 @@ I am an engineer and a PhD candidate in [EMSE](https://emse.engineering.gwu.edu/
 
 1. [BEV Smart Charging](https://sc.pingfanhu.com): A survey-based data analysis studying Battery Electric Vehicle owners' willingness to opt in smart charging programs, funded by the {{< var sloan >}}.
 2. [surveydown](https://surveydown.org): A flexible, open-source platform for making surveys with {{< var rnolink >}}, Quarto, Shiny, and PostgreSQL, awarded 🎉 2nd prize in [GW OSPO](https://ospo.gwu.edu/2024-student-open-source-award-winners), funded by the {{< var sloan >}}.
+3. [sdApps](https://sdapps.surveydown.org): A companion R package of surveydown, containing a GUI studio and a dashboard, in cooperation with [Bogdan Bunea](https://www.linkedin.com/in/bogdanbt/).
