--- a/blogs/07_github_action_to_build_website/index.qmd
+++ b/blogs/07_github_action_to_build_website/index.qmd
@@ -37,48 +37,51 @@ The built folder is by default `_site/` for Quarto. The first step is to add `_s
 Then, create a GitHub Actions workflow file to build your site when you push to your repository. Create a file at `.github/workflows/build.yml` with content like this:
 
 ```{yaml}
-name: Build Quarto Website
+name: Build and Deploy to Netlify
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up R
-      uses: r-lib/actions/setup-r@v2
-      
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libfontconfig1-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev libfribidi-dev libharfbuzz-dev
-      
-    - name: Install quarto
-      uses: quarto-dev/quarto-actions/setup@v2
-      
-    - name: Set up R dependencies with renv
-      uses: r-lib/actions/setup-renv@v2
-      
-    - name: Render Quarto website
-      run: |
-        quarto render
-        
-    - name: Deploy to Netlify
-      uses: nwtgck/actions-netlify@v2.0
-      with:
-        publish-dir: './_site'
-        production-branch: main
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        deploy-message: "Deploy from GitHub Actions"
-      env:
-        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      - uses: actions/checkout@v4
+
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3.2'
+          use-public-rspm: true
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libxml2-dev
+
+      - name: Install R packages
+        run: |
+          install.packages('pak', repos = sprintf("https://r-lib.github.io/p/pak/stable/%s/%s/%s", .Platform$pkgType, R.Version()$os, R.Version()$arch))
+
+          # Change to your required packages
+          pak::pkg_install(c('tidyverse', 'kableExtra', 'here'))
+        shell: Rscript {0}
+
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Render Quarto Project
+        uses: quarto-dev/quarto-actions/render@v2
+
+      - name: Deploy to Netlify
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=_site --prod
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 ```
 
 ## Set Up Secrets in GitHub
