--- a/blogs/07_github_action_to_build_website/index.qmd
+++ b/blogs/07_github_action_to_build_website/index.qmd
@@ -66,7 +66,7 @@ jobs:
           install.packages('pak', repos = sprintf("https://r-lib.github.io/p/pak/stable/%s/%s/%s", .Platform$pkgType, R.Version()$os, R.Version()$arch))
 
           # Change to your required packages
-          pak::pkg_install(c('tidyverse', 'kableExtra', 'here'))
+          pak::pkg_install(c('tidyverse', 'kableExtra', 'here', 'surveydown'))
         shell: Rscript {0}
 
       - name: Setup Quarto
@@ -76,9 +76,11 @@ jobs:
         uses: quarto-dev/quarto-actions/render@v2
 
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@master
+        uses: nwtgck/actions-netlify@v3.0
         with:
-          args: deploy --dir=_site --prod
+          publish-dir: '_site'
+          production-branch: main
+          deploy-message: "Deploy from GitHub Actions"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
