--- a/projects/04_sdstudio/index.qmd
+++ b/projects/04_sdstudio/index.qmd
@@ -4,8 +4,7 @@ author:
   - name: "[Pingfan Hu](https://pingfanhu.com)"
   - name: "[John Helveston](https://www.jhelvy.com)"
   - name: "[Bogdan Bunea](https://www.linkedin.com/in/bogdanbt/)"
-description: |
-  A companion R package as GUI support for surveydown.
+description: A companion {{< var rnolink >}} package as GUI support for surveydown.
 date: '2025-06-29'
 image: "banner.png"
 number-sections: true
