--- a/blog/08_dynata_tutorial/index.qmd
+++ b/blog/08_dynata_tutorial/index.qmd
@@ -2,12 +2,24 @@
 title: "Dynata Link Embedding with surveydown"
 date: "2025-07-07"
 number-sections: true
-execute: 
-  eval: false
-include-after-body: 
-    - text: |
-        <script src="auth.js"></script>
+eval: false
+description: "A brief tutorial on how to embed Dynata links in your surveydown survey."
 ---
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  // Check if user is authenticated
+  if (sessionStorage.getItem('auth') !== 'true') {
+    // Redirect back to blog page if not authenticated
+    window.location.href = '/blog.html';
+  }
+  
+  // Clear authentication after 1 hour (optional)
+  setTimeout(function() {
+    sessionStorage.removeItem('auth');
+  }, 3600000); // 1 hour in milliseconds
+});
+</script>
 
 ## Motivation
 
