--- a/blog.qmd
+++ b/blog.qmd
@@ -8,9 +8,7 @@ listing:
   sort-ui: false
   filter-ui: false
 page-layout: full
-resources:
-  - styling/auth.js
 ---
 
-<script src="styling/auth.js"></script>
+{{< include styling/auth.qmd >}}
 
