--- a/blog.qmd
+++ b/blog.qmd
@@ -10,5 +10,31 @@ listing:
 page-layout: full
 ---
 
-{{< include styling/auth.qmd >}}
+```{r}
+#| echo: false
+#| results: asis
 
+# Define protected files here
+protected_files <- c("08_dynata_tutorial")
+
+# Read .env file if it exists
+if (file.exists(".env")) {
+  env_lines <- readLines(".env")
+  for (line in env_lines) {
+    if (nchar(line) > 0 && !startsWith(line, "#")) {
+      parts <- strsplit(line, "=", fixed = TRUE)[[1]]
+      if (length(parts) == 2) {
+        env_name <- parts[1]
+        env_value <- parts[2]
+        do.call(Sys.setenv, setNames(list(env_value), env_name))
+      }
+    }
+  }
+}
+
+site_password <- Sys.getenv("SITE_PASSWORD", "defaultpass")
+
+cat(paste0('<script>window.SITE_PASSWORD = "', site_password, '";</script>'))
+cat('<script>window.PROTECTED_FILES = ', jsonlite::toJSON(protected_files), ';</script>')
+cat('<script src="styling/auth.js"></script>')
+```
