--- a/blog/08_dynata_tutorial/index.qmd
+++ b/blog/08_dynata_tutorial/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Dynata Link Embedding with surveydown"
 date: "2025-07-07"
+categories: [Tutorial]
 number-sections: true
 eval: false
 description: "A brief tutorial on how to embed Dynata links in your surveydown survey."
