--- a/projects/03_surveydown/index.qmd
+++ b/projects/03_surveydown/index.qmd
@@ -17,10 +17,10 @@ description: "An open-source survey platform using {{< var rnolink >}}, Quarto, 
 
 ## Useful Links
 
-::: {.d-flex .justify-content-center}
-[<i class="bi bi-browser-safari"></i> Website](https://surveydown.org){.btn .btn-primary .mx-1}
-[<i class="bi bi-github"></i> GitHub](https://github.com/surveydown-dev/surveydown){.btn .btn-primary .mx-1}
-[<i class="bi bi-award"></i> Award](https://ospo.gwu.edu/2024-student-open-source-award-winners){.btn .btn-primary .mx-1}
+::: {.d-flex .justify-content-center .flex-wrap .text-center}
+[<i class="bi bi-browser-safari"></i> Website](https://surveydown.org){.btn .btn-primary .m-1 style="width: 140px;"}
+[<i class="bi bi-github"></i> GitHub](https://github.com/surveydown-dev/surveydown){.btn .btn-primary .m-1 style="width: 140px;"}
+[<i class="bi bi-award"></i> Award](https://ospo.gwu.edu/2024-student-open-source-award-winners){.btn .btn-primary .m-1 style="width: 140px;"}
 :::
 
 ## Publication
@@ -29,10 +29,10 @@ description: "An open-source survey platform using {{< var rnolink >}}, Quarto, 
 ::: {.card-body}
 **Journal Paper** - surveydown: An open-source, markdown-based platform for programmable and reproducible surveys
 
-PLOS One, *August 2025*
+PLOS One, August 2025 | DOI: [10.1371/journal.pone.0331002](https://doi.org/10.1371/journal.pone.0331002)
 
 ::: {.d-flex .justify-content-end}
-[<i class="bi bi-journal-bookmark-fill"></i> Journal Webpage](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0331002){.btn .btn-outline-primary .mx-1}
+[<i class="bi bi-journal-bookmark-fill"></i> PLOS One Webpage](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0331002){.btn .btn-outline-primary .mx-1}
 [<i class="bi bi-file-earmark-pdf"></i> PDF](/pdf/surveydown_2025.pdf){.btn .btn-outline-primary .mx-1}
 :::
 :::
