--- a/projects/01_smart_charging_adoption/index.qmd
+++ b/projects/01_smart_charging_adoption/index.qmd
@@ -8,10 +8,10 @@ description: "EV owner preferences for smart charging programs."
 
 ## Useful Links
 
-::: {.d-flex .justify-content-center}
-[<i class="bi bi-file-text"></i> Showcase](https://sc.pingfanhu.com){.btn .btn-primary .mx-1}
-[<i class="bi bi-file-richtext"></i> Documentation](https://bev.pingfanhu.com){.btn .btn-primary .mx-1}
-[<i class="bi bi-calculator"></i> Simulator](https://gwuvehicle.shinyapps.io/enrollment_simulator/){.btn .btn-primary .mx-1}
+::: {.d-flex .justify-content-center .flex-wrap .text-center}
+[<i class="bi bi-file-text"></i> Showcase](https://sc.pingfanhu.com){.btn .btn-primary .m-1 style="width: 170px;"}
+[<i class="bi bi-file-richtext"></i> Documentation](https://bev.pingfanhu.com){.btn .btn-primary .m-1 style="width: 170px;"}
+[<i class="bi bi-calculator"></i> Simulator](https://gwuvehicle.shinyapps.io/enrollment_simulator/){.btn .btn-primary .m-1 style="width: 170px;"}
 :::
 
 ## Publications
