--- a/projects/03_surveydown/index.qmd
+++ b/projects/03_surveydown/index.qmd
@@ -38,22 +38,37 @@ PLOS One, August 2025 | DOI: [10.1371/journal.pone.0331002](https://doi.org/10.1
 :::
 ::::
 
+## Citation
+
+If you use this package in a publication, please cite the *PLOS One* article associated with it! You can get the citation information by typing `citation("surveydown")` into R, or copying below.
+
+```{r}
+citation("surveydown")
+```
+
+::: {.callout-note icon=false}
+
+## Suggested citation
+
+Hu P, Bunea B, Helveston J (2025). “surveydown: An open-source, markdown-based platform for programmable and reproducible surveys.” _PLOS One_, *20*(8). [doi:10.1371/journal.pone.0331002](https://doi.org/10.1371/journal.pone.0331002)
+
+:::
+
 ## Overview
-
-The [**surveydown**](https://surveydown.org) project is led by [Prof John Helveston](https://www.jhelvy.com). For more details, see our [About](https://surveydown.org/about) page.
-
-<br>
 
 ![](technologies.svg){fig-align="center" width="550"}
 
-The basic concept is:
+**surveydown** is a flexible, open-source platform for making programmable, markdown-based surveys with {{< var rlink >}}, {{< var quarto >}}, {{< var shiny >}}, and {{< var postgres >}}.
 
-1. Design your survey as a {{< var quarto >}} document using markdown and {{< var rnolink >}} code.
+The {{< var rnolink >}} package deployment site can be accessed [here](https://pkg.surveydown.org/).
+
+Here's how it works:
+
+1. Design your survey as a {{< var quarto >}} document using markdown and R code.
 2. Render your survey into a {{< var shiny >}} app that can be hosted online and sent to respondents.
 3. Store survey response data in a {{< var postgres >}} database. We recommend {{< var supabase >}} as a free, secure, and easy to use option.
 
-The `surveydown` {{< var rnolink >}} package provides functions to bring this all
-together.
+The **surveydown** {{< var rlink >}} package provides functions to bring this all together.
 
 **See [Documentation](https://surveydown.org/documentation) to get started making
 your own surveydown survey!**
@@ -62,29 +77,16 @@ your own surveydown survey!**
 
 ## Motivation
 
-Most survey platforms (e.g., Google forms, Qualtrics, etc.) use graphic interfaces or spreadsheets to define survey content, making version control, collaboration, and reproducibility difficult or impossible. The `surveydown` {{< var rnolink >}} package was designed to address these problems. As an open-source, markdown-based platform, all survey content is defined using **plain text** (markdown and {{< var rnolink >}} code) in two files:
+Most survey platforms use graphic interfaces or spreadsheets to define survey content, making version control, collaboration, and reproducibility difficult or impossible. Surveydown was designed to address these problems. As an open-source, markdown-based platform, all survey content is defined using **plain text** (markdown and R code) in two files:
 
 - **survey.qmd**: A {{< var quarto >}} document that contains the survey content (pages, questions, etc).
-- **app.R**: An {{< var rnolink >}} script defining a shiny app that contains global settings (libraries, database configuration, etc.) and server configuration options (e.g., conditional skipping / display, etc.).
+- **app.R**: An R script defining a shiny app that contains global settings (libraries, database configuration, etc.) and server configuration options (e.g., conditional page skipping / conditional display, etc.).
 
-This approach makes your survey easy to reproduce, share, and version control with common tools like Git. And since all survey data is stored in a {{< var postgres >}} database, you have total control over where your survey data lives. We provide direct support for {{< var supabase >}} as a free, secure, and easy to use option.
+This approach makes it easy to reproduce, share, and version control your surveys with common tools like Git. And since all survey data is stored in a {{< var postgres >}} database, you have total control over where your survey data lives. We recommend {{< var supabase >}} as a free, secure, and easy to use option.
 
-In case you're interested in the background behind the project, this [blog post](https://www.jhelvy.com/blog/2023-04-06-markdown-surveys/) provides something of an origin story. Note that the design discussed in the post is now quite outdated with what ultimately became surveydown.
+## Usage
 
-## Installation
-
-### 1. Install {{< var rnolink >}} & Quarto
-
-You need both: 
-
-- Install {{< var rlink >}}
-- Install {{< var quarto >}}
-
-We also recommend working with an IDE that has good support for {{< var rnolink >}}, Quarto, and Shiny.
-
-{{< var rstudio_ide >}} is great, and we also like {{< var vscode >}} and {{< var positron >}}.
-
-### 2. Install the `surveydown` R package
+To start using **surveydown**, you need both {{< var rlink >}} and {{< var quarto >}} installed on your computer. We also recommend working with an IDE that has good support for {{< var rnolink >}}, Quarto, and Shiny. {{< var rstudio_ide >}} is great, and we also like {{< var positron >}} and {{< var vscode >}}.
 
 You can install `surveydown` from CRAN in your {{< var rnolink >}} console:
 
@@ -94,7 +96,7 @@ You can install `surveydown` from CRAN in your {{< var rnolink >}} console:
 install.packages("surveydown")
 ```
 
-or you can install the development version from [GitHub](https://github.com/surveydown-dev/surveydown):
+Or you can install the development version from [GitHub](https://github.com/surveydown-dev/surveydown):
 
 ```{r}
 #| eval: false
@@ -111,46 +113,6 @@ Load the package with:
 library(surveydown)
 ```
 
-## License Information
+## License
 
-See the license information [here](https://github.com/surveydown-dev/surveydown/blob/master/LICENSE.md).
-
-## Citation Information
-
-If you use this package for in a publication, please cite it! You can
-get the citation by typing `citation("surveydown")` into {{< var rnolink >}}:
-
-```{r}
-citation("surveydown")
-```
-
-It will show:
-
-::: {.full-height}
-```{.bibtex}
-To cite surveydown in publications use:
-
-  Hu P, Bunea B, Helveston J (2025). “surveydown: An open-source,
-  markdown-based platform for programmable and reproducible surveys.”
-  _PLOS One_, *20*(8). doi:10.1371/journal.pone.0331002
-  <https://doi.org/10.1371/journal.pone.0331002>.
-
-A BibTeX entry for LaTeX users is
-
-  @Article{,
-    title = {surveydown: An open-source, markdown-based platform for programmable and reproducible surveys},
-    author = {Pingfan Hu and Bogdan Bunea and John Paul Helveston},
-    journal = {PLOS One},
-    year = {2025},
-    volume = {20},
-    number = {8},
-    doi = {10.1371/journal.pone.0331002},
-  }
-```
-:::
-
-Or you can copy the following citation texts:
-
-```{.default}
-Hu P, Bunea B, Helveston JP (2025) surveydown: An open-source, markdown-based platform for programmable and reproducible surveys. PLoS One 20(8): e0331002. https://doi.org/10.1371/journal.pone.0331002
-```
+See the [License](https://github.com/surveydown-dev/surveydown/blob/master/LICENSE.md) page on the source code repository.
